{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 46,
  "lineage": "6857ff30-c3a9-7316-e780-55c567f3c975",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:590183807048:instance/i-046a6017484c32b76",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046a6017484c32b76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06af090ebae1344b5",
            "private_dns": "ip-10-0-1-242.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-100-24-120-179.compute-1.amazonaws.com",
            "public_ip": "100.24.120.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0246ddf80766c0e78",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0982616c3f6921a9d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04760a48c69d3e859",
            "tags": {
              "Name": "us-east-1a-instance"
            },
            "tags_all": {
              "Name": "us-east-1a-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0982616c3f6921a9d"
            ]
          },
          "dependencies": [
            "aws_security_group.instance1_sg",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.ec2_us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d7e3e669718ab45",
            "arn": "arn:aws:ec2:us-east-2:590183807048:instance/i-04080e75e8be9ff57",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04080e75e8be9ff57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c5be342a829a1f8",
            "private_dns": "ip-10-0-1-43.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.43",
            "public_dns": "ec2-18-119-167-140.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.167.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0516ae1ac4fd97fb8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01b601cb9d797d7e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fdcc7f56a64bae3",
            "tags": {
              "Name": "us-east-2a-instance"
            },
            "tags_all": {
              "Name": "us-east-2a-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b601cb9d797d7e1"
            ]
          },
          "dependencies": [
            "aws_security_group.instance2_sg",
            "aws_subnet.public-us-east-2a",
            "aws_vpc.ec2_us_east_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "us_east_1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183807048:internet-gateway/igw-0e50f684403c9776e",
            "id": "igw-0e50f684403c9776e",
            "owner_id": "590183807048",
            "tags": {
              "Name": "Multi-Region-EC2-provisioning-igw"
            },
            "tags_all": {
              "Name": "Multi-Region-EC2-provisioning-igw"
            },
            "vpc_id": "vpc-0ba80575d351da429"
          },
          "dependencies": [
            "aws_vpc.ec2_us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "us_east_2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183807048:internet-gateway/igw-092332f410fadaa77",
            "id": "igw-092332f410fadaa77",
            "owner_id": "590183807048",
            "tags": {
              "Name": "Multi-Region-EC2-provisioning-igw"
            },
            "tags_all": {
              "Name": "Multi-Region-EC2-provisioning-igw"
            },
            "vpc_id": "vpc-066dd40b9df4a17f2"
          },
          "dependencies": [
            "aws_vpc.ec2_us_east_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us_east_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183807048:route-table/rtb-0eee7701c6f646e3e",
            "id": "rtb-0eee7701c6f646e3e",
            "owner_id": "590183807048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e50f684403c9776e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba80575d351da429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.us_east_1_igw",
            "aws_vpc.ec2_us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us_east_2a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183807048:route-table/rtb-01fa4538294394cd5",
            "id": "rtb-01fa4538294394cd5",
            "owner_id": "590183807048",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092332f410fadaa77",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-066dd40b9df4a17f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.us_east_2_igw",
            "aws_vpc.ec2_us_east_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f197a42cd5ff095d",
            "route_table_id": "rtb-0eee7701c6f646e3e",
            "subnet_id": "subnet-04760a48c69d3e859"
          },
          "dependencies": [
            "aws_internet_gateway.us_east_1_igw",
            "aws_route_table.us_east_1a_public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.ec2_us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1a756ae7a593b23",
            "route_table_id": "rtb-01fa4538294394cd5",
            "subnet_id": "subnet-06fdcc7f56a64bae3"
          },
          "dependencies": [
            "aws_internet_gateway.us_east_2_igw",
            "aws_route_table.us_east_2a_public",
            "aws_subnet.public-us-east-2a",
            "aws_vpc.ec2_us_east_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183807048:security-group/sg-0982616c3f6921a9d",
            "description": "Security group for instance1 in us-east-1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0982616c3f6921a9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "instance1-sg",
            "name_prefix": "",
            "owner_id": "590183807048",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ba80575d351da429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ec2_us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183807048:security-group/sg-01b601cb9d797d7e1",
            "description": "Security group for instance2 in us-east-2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b601cb9d797d7e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance2-sg",
            "name_prefix": "",
            "owner_id": "590183807048",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-066dd40b9df4a17f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ec2_us_east_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183807048:subnet/subnet-04760a48c69d3e859",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04760a48c69d3e859",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183807048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "Type": "public"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "Type": "public"
            },
            "vpc_id": "vpc-0ba80575d351da429"
          },
          "dependencies": [
            "aws_vpc.ec2_us_east_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183807048:subnet/subnet-06fdcc7f56a64bae3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fdcc7f56a64bae3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183807048",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-2a",
              "Type": "public"
            },
            "tags_all": {
              "Name": "public-us-east-2a",
              "Type": "public"
            },
            "vpc_id": "vpc-066dd40b9df4a17f2"
          },
          "dependencies": [
            "aws_vpc.ec2_us_east_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_us_east_1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183807048:vpc/vpc-0ba80575d351da429",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e9d32ebaf69c997",
            "default_route_table_id": "rtb-073d6df9f533dbccf",
            "default_security_group_id": "sg-02fddf5b3993461de",
            "dhcp_options_id": "dopt-05f446949941a28b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba80575d351da429",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073d6df9f533dbccf",
            "owner_id": "590183807048",
            "tags": {
              "Name": "Multi-Region-EC2-provisioning-vpc"
            },
            "tags_all": {
              "Name": "Multi-Region-EC2-provisioning-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_us_east_2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590183807048:vpc/vpc-066dd40b9df4a17f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086ed44685ceb3431",
            "default_route_table_id": "rtb-09200e448e646ce90",
            "default_security_group_id": "sg-0b6c17a37a43cfef5",
            "dhcp_options_id": "dopt-0bfd46ecadfea568b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066dd40b9df4a17f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09200e448e646ce90",
            "owner_id": "590183807048",
            "tags": {
              "Name": "Multi-Region-EC2-provisioning-vpc"
            },
            "tags_all": {
              "Name": "Multi-Region-EC2-provisioning-vpc"
            }
          }
        }
      ]
    }
  ]
}